Añadido cambio de prueba

--- a/public/index.html
+++ b/public/index.html
@@ -214,6 +214,7 @@
           </div>
         </section>
   
+         <!--Pie de pagina-->
         <footer class="footer">
           <div class="footer-logo">
             <img
