Descripción de los cambios realizados en index.html

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" type="text/css" href="css/utilidades.css" />
     -->
   </head>
-  <!--Estructura semantica-->
+  <!--Estructura semantica del programa-->
   <body>
     <!--Encabezado-->
     <header>
