Agrege comentarios en index.html

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
           <img src="https://i.pinimg.com/736x/c9/81/78/c981787d671d96eb61a0c2b41435594b.jpg" />
         </div>
       </section>
+      <!--seccion de nosotros-->
       <section id="nosotros">
         <h3>Nosotros</h3>
         <p>
@@ -62,6 +63,7 @@
           o áreas con riesgos físicos.
         </p>
       </section>
+      <!--seccion de beneficios-->
       <section id="beneficios">
         <h3>Beneficios de la App</h3>
         <img
