Añadi un comentario en index,html

--- a/public/index.html
+++ b/public/index.html
@@ -193,7 +193,7 @@
             </div>
           </div>
         </section>
-  
+        <!--seccion de informacino de contactos-->
         <section class="info-section">
           <div class="info-box">
             <p>¿Necesitas más información?</p>
