Actualización de index.html y styles.css en la carpeta public

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <script src="package.json"></script>
     <meta name="description" content="Pagina de Arquitectura vr" />
     <meta name="theme-color" content="#CAC3B2" />
-    <!--Añadimos el logo inicial...-->
+    <!--Añadimos el logo inicial.-->
     <link
       rel="icon"
       href="https://i.pinimg.com/736x/cb/1e/96/cb1e96fef81060c9f9765bbbf2d35c64.jpg"
