Agregado index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           href="https://i.pinimg.com/736x/cb/1e/96/cb1e96fef81060c9f9765bbbf2d35c64.jpg"
   />
 </head>
-<!--Estructura semantica del programa-->
+<!--Estructura semantica del programa.-->
 <body>
 <!--Encabezado-->
 <header>
